--- a/client/src/sass/player/peertube-skin.scss
+++ b/client/src/sass/player/peertube-skin.scss
@@ -108,6 +108,7 @@ body {
 
   .vjs-poster {
     outline: 0;
+    background-size: cover;
   }
 
   @media screen and (max-width: $screen-width-750) {
